# Whitelistarr

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  build.sh  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  cleanup-dev-images.yml  codeql.yml  dev.yml  docker-refresh.yml  docker.yml  dockerhub-readme.yml  edge.yml  labeler.yml  pr-title.yml  pre-release.yml  release-pr-title.yml  release.yml  stale.yml  tests.yml
app/: __init__.py  config.py  config_schema.py  configstore.py  logbuffer.py  main.py  onboarding.py  runtime.py  scheduler.py  state.py  status.py  webhook.py  webui.py
app/clients/: arr.py  base.py  notify.py  plex.py  plex_auth.py  radarr.py  seerr.py  sonarr.py  tautulli.py
app/core/: labeler.py  matching.py  reactive.py  sync.py  watch_monitor.py
app/static/: app.js  index.html  style.css
app/static/css/: style.css
app/static/js/: api.js  app.js  helpers.js  router.js  store.js
templates/.components/: changes.md.j2
tests/: test_app_integration.py  test_arr_clients.py  test_config.py  test_config_schema.py  test_configstore.py  test_connection_probes.py  test_js_helpers.py  test_labeler.py  test_load_settings.py  test_logbuffer.py  test_main_wiring.py  test_matching.py  test_notify.py  test_onboarding.py  test_packaging.py  test_plex_auth.py  test_plex_item.py  test_reactive.py  test_runtime.py  test_scheduler.py  test_seerr_tautulli.py  test_state.py  test_status.py  test_sync.py  test_watch_monitor.py  test_webhook.py  test_webui.py  test_webui_status.py
tests/js/: helpers.test.js
