[project]
name = "whitelistarr"
# Version is derived from the latest git tag by setuptools-scm (see
# [tool.setuptools_scm]); semantic-release creates the tags. Nothing to hand-edit.
dynamic = ["version"]
description = "Automatically sync Sonarr/Radarr requester tags to Plex labels and send Apprise notifications for watch milestones."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
    "PlexAPI>=4.15",
    "httpx>=0.27",
    "apprise>=1.8",
    "apscheduler>=3.10",
    # APScheduler needs tzlocal at import time. Pinned directly because the
    # tzlocal 5.4.2 wheel ships only dist-info (no module) and breaks `import
    # apscheduler`; exclude it so resolution lands on a working release.
    "tzlocal>=5.2,!=5.4.2",
    "pydantic-settings>=2.4",
    "cryptography>=43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
]

[project.scripts]
whitelistarr = "app.main:run"

[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

# Derive the version from git tags. In the Docker build (no .git in context) the
# release workflow passes SETUPTOOLS_SCM_PRETEND_VERSION_FOR_WHITELISTARR.
[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F/W (errors), I (import sort), B (bugbear), UP (pyupgrade). E501 off — long
# lines are fine; B008 off — FastAPI's Depends()/Query() defaults are idiomatic.
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "B008"]

# ---------------------------------------------------------------------------
# python-semantic-release computes the next version from Conventional Commits and
# creates the git tag + GitHub Release. It does NOT write the version into source
# or commit anything back (the workflows run it with commit: false, and the
# version is derived from the tag by setuptools-scm) — so `main` stays free of
# `chore(release)` bot commits.
#   feat: -> minor   fix: -> patch   feat!: / BREAKING CHANGE -> major
# Trunk-based: tags on `main` are stable; the on-demand `beta` branch tags
# prereleases (1.2.0-beta.1).
# ---------------------------------------------------------------------------
[tool.semantic_release]
tag_format = "v{version}"
build_command = ""
commit_author = "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.beta]
match = "beta"
prerelease = true
prerelease_token = "beta"

[tool.semantic_release.changelog]
# Custom emoji-section template lives in templates/ (vendored from PSR's
# conventional/md defaults; only changes.md.j2 is edited). "init" mode fully
# regenerates CHANGELOG.md each release so every entry gets the emoji headings.
mode = "init"
template_dir = "templates"
exclude_commit_patterns = ["^chore\\(release\\):.*"]
